--- a/src/Content/Content.css
+++ b/src/Content/Content.css
@@ -16,10 +16,10 @@
   background-color: #15418b;
   color: white;
   width: 100px;
-  height: 50px;
+  height: 35px;
   /* padding: 5px 100px; */
   border-radius: 10px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   cursor: pointer;
   margin-left: 20px;
   /* text-wrap: nowrap; */
@@ -45,5 +45,63 @@
   display: flex;
 }
 .entry-box {
-  margin-left: 100px;
+  margin-left: 10px;
+  display: flex;
+}
+.select-data {
+  width: 300px;
+  margin-left: 10px;
+}
+
+/*-----------------------------------------------------------------------------------*/
+
+/* content */
+.card {
+  /* border: 1px solid rgb(14, 11, 11); */
+  /* flex-wrap: nowrap; */
+  box-shadow: 4px 3px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 350px;
+  height: 200px;
+  cursor: pointer;
+}
+.card-container {
+  /* border: 1px solid red; */
+  display: flex;
+  margin-top: 50px;
+  margin-left: 200px;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+  /* display: block; */
+  padding-bottom: 20px;
+}
+.position {
+  font-size: 20px;
+  font-weight: bold;
+}
+.experience-icon,
+.education-icon,
+.location-icon {
+  color: rgb(88, 88, 88);
+  padding-right: 5px;
+}
+.card-item {
+  /* margin-top: 10px; */
+  padding: 5px 15px;
+}
+.department {
+  font-size: 16px;
+  font-weight: 400;
+}
+.card-img {
+  position: absolute;
+  /* border: 1px solid red; */
+  width: 80px;
+  height: 20px;
+  margin-left: 240px;
+  background-color: #15418b;
+  padding: 5px 10px;
+  border-radius: 5px;
 }
