--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -2,7 +2,8 @@
   width: 100%;
   height: 100px;
   background-color: black;
-  position: absolute;
+
+  /* position: absolute; */
   bottom: 0;
 }
 .text {
